--- a/Amachahu2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Amachahu2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -278,7 +278,7 @@ TakeRecorderWorldSourceSettings=
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Megascans/3D_Assets/Quarry_Cliff_uchpbg3fa
+ContentBrowserTab1.SelectedPaths=
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -310,13 +310,32 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/StarterContent
+ContentBrowserDrawer.SelectedPaths=/Game/LevelPrototyping/Materials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserTab2.SourcesExpanded=True
+ContentBrowserTab2.FavoritesAreaExpanded=False
+ContentBrowserTab2.PathAreaExpanded=True
+ContentBrowserTab2.CollectionAreaExpanded=False
+ContentBrowserTab2.FavoritesSearchAreaExpanded=False
+ContentBrowserTab2.PathSearchAreaExpanded=False
+ContentBrowserTab2.CollectionSearchAreaExpanded=False
+ContentBrowserTab2.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab2.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab2.SelectedPaths=/Game/Megascans
+ContentBrowserTab2.PluginFilters=
+ContentBrowserTab2.Favorites.SelectedPaths=
+ContentBrowserTab2.SelectedCollections=
+ContentBrowserTab2.ExpandedCollections=
+ContentBrowserTab2.ThumbnailSize=2
+ContentBrowserTab2.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -2000,6 +2019,7 @@ WebBrowser.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=D:/Program Files/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [AssetEditorSubsystemRecents]
@@ -2099,5 +2119,5 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Beach_Cliff_wdqiedw/S_Beach_Cliff_wdqie
 RecentlyPlaced=/Game/Megascans/3D_Assets/Mud_Rock_xd0mcf2/S_Mud_Rock_xd0mcf2_lod3_Var1.S_Mud_Rock_xd0mcf2_lod3_Var1;
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=MapCheck
 
